--- a/index.html
+++ b/index.html
@@ -8,15 +8,7 @@
     <link rel="stylesheet" href="/Style css/Style.css">
 </head>
 <body>
-    <main>
-        <nav class="menu">
-            <ul class="flex">
-                <li><a href="shoe-differente">1</a></li>
-                <li><a href="shoe-tommyhilfiger">2</a></li>
-                <li><a href="">3</a></li>
-            </ul>
-
-        </nav>
+    <main class="">
         <Section class="full-page flex bg-red text-color-yellow">
             <img src="img/01.png" alt="" id="shoe-differente">
             <div class="text-contenitore"><h1>Il nostro modello di punta</h1></div>
@@ -31,7 +23,15 @@
             <img src="img/03.png" alt="" id="shoe-converse">
             <div class="text-contenitore"><h1>Il nostro modello di punta</h1></div>
         </Section>
+    </main>
 
-    </main>    
+        <nav class="menu">
+            <ul class="flex">
+                <li><a href="#shoe-differente">1</a></li>
+                <li><a href="#shoe-tommyhilfiger">2</a></li>
+                <li><a href="#shoe-converse">3</a></li>
+            </ul>
+        </nav>
+    
 </body>
 </html>
