--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&family=Rubik+Mono+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="/Style css/Style.css">
+    <link rel="stylesheet" href="../htmlcss-shoes/Style/Style.css">
 </head>
 <body>
     <main class="">
         <Section class="full-page flex bg-red text-color-yellow">
-            <img src="img/01.png" alt="" id="shoe-differente">
+            <img src="../htmlcss-shoes/img/01.png" alt="" id="shoe-differente">
             <div class="text-contenitore"><h1>Il nostro modello di punta</h1></div>
         </Section>
         
         <Section class="full-page flex bg-green text-color-yellow">
-            <img src="img/02.png" alt="" id="shoe-tommyhilfiger">
+            <img src="../htmlcss-shoes/img/02.png" alt="" id="shoe-tommyhilfiger">
             <div class="text-contenitore"><h1>Il nostro modello di punta</h1></div>
         </Section>
         
         <Section class="full-page flex bg-yellow text-color-green">
-            <img src="img/03.png" alt="" id="shoe-converse">
+            <img src="../htmlcss-shoes/img/03.png" alt="" id="shoe-converse">
             <div class="text-contenitore"><h1>Il nostro modello di punta</h1></div>
         </Section>
     </main>
